Bug 923961 - Force b2g-desktop to composite on OSX. r=mstange